c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/unclosed_initializer.c
int main(void) {
    int arr = {1, 2;
    return arr[0];
}